--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					</div>
 					<h3>Article Title</h3>
 					<p>This is an article.</p>
-					<div class="portrait-frame-brown" style="background-image: url('../../images/Libor.png')"></div>
+					<div class="portrait-frame-brown" style="background-image: url('images/Libor.png')"></div>
 					<div class="portrait-frame-brown" style="background-image: url('../../images/Stepi.png')"></div>
 					<div class="portrait-frame-brown" style="background-image: url('../../images/Lucy.png')"></div>
 					<div class="map-container">
