--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 					<h3>Article Title</h3>
 					<p>This is an article.</p>
 					<div class="portrait-frame-brown" style="background-image: url('images/Libor.png')"></div>
-					<div class="portrait-frame-brown" style="background-image: url('../../images/Stepi.png')"></div>
-					<div class="portrait-frame-brown" style="background-image: url('../../images/Lucy.png')"></div>
+					<div class="portrait-frame-brown" style="background-image: url('images/Stepi.png')"></div>
+					<div class="portrait-frame-brown" style="background-image: url('images/Lucy.png')"></div>
 					<div class="map-container">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2654.936138762117!2d17.268519177450997!3d48.28484444089578!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476c90b883e844c9%3A0xefa40b8ca455e5d3!2sLep%C5%A1ia%20cesta%2C%20n.o.%20-%20Centrum%20pomoci!5e0!3m2!1sen!2ssk!4v1739996569533!5m2!1sen!2ssk" width="450px" height="450px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 						<div class="transparent-brown"></div>
@@ -93,7 +93,7 @@
 			</main>
 
 			<footer class="layout-footer">
-            <div class="logo-frame-brown"  style="background-image: url('../../images/logo-bk-232-200-137.png')"></div>
+            <div class="logo-frame-brown"  style="background-image: url('images/logo-bk-232-200-137.png')"></div>
 				<div>
 					<p>
 						<strong>Lepšia cesta, n.o. :: Kollárova 121/1 :: 902 01 Pezinok</strong>
@@ -111,7 +111,7 @@
 						<span class="brown1">SK97 8330 0000 0029 0099 9269</span>
 					</p>
 				</div>
-                <div class="logo-frame-brown"  style="background-image: url('../../images/pezinok_logos-brown2.svg')"></div>
+                <div class="logo-frame-brown"  style="background-image: url('images/pezinok_logos-brown2.svg')"></div>
 			</footer>
 		</div>
 	</body>
