--- a/index.html
+++ b/index.html
@@ -77,8 +77,17 @@
 						</nav>
 					</div>
 					<h3>Article Title</h3>
-					<p>This is an article.</p>
-					<div class="portrait-frame-brown" style="background-image: url('images/Libor.png')"></div>
+					<p>Náš tím</p>
+					<div class="layout-person">
+						<div class = "portrait-frame-brown" style="background-image: url('images/Libor.png')"></div>
+						<div class = "layout-person-description">
+							<p>MUDr. Libor Kišš</p>
+							<p class="person-work-position">štatutárny zástupca</p>
+							<p><div style="background-image: url('images/icons/phone-svgrepo-com.svg')">ss</div><a class="person-telephone" href="tel:+421 907 402 564">+421 907 402 564</a></p>
+							<p><a class="person-email" href="mailto:kiss@lepsiacesta.sk">kiss@lepsiacesta.sk</a></p>
+						</div>
+					</div>
+					
 					<div class="portrait-frame-brown" style="background-image: url('images/Stepi.png')"></div>
 					<div class="portrait-frame-brown" style="background-image: url('images/Lucy.png')"></div>
 					<div class="map-container">
